Fix title spacing on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2075,7 +2075,7 @@ footer {
     }
 
     .about-page .title-section {
-        height: 50vw;
+        height: 60vw;
     }
 
     .about-page .title {
@@ -2141,7 +2141,7 @@ footer {
 
     /* --- Section 1 (Title) --- */
     .services-page .services-s1 {
-        height: 50vw;
+        height: 60vw;
     }
 
     .services-page .services-s1-title {
@@ -2197,7 +2197,7 @@ footer {
     }
 
     .team-page .title-section {
-        height: 50vw;
+        height: 60vw;
     }
 
     .team-page .title {
@@ -2282,7 +2282,7 @@ footer {
     }
 
     .join-page .title-section {
-        height: 50vw;
+        height: 60vw;
     }
 
     .join-page .title {
